--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="orange">#FFA94D</color>
+    <color name="text_gray">#828282</color>
+    <color name="divider_color">#828282</color>
+    <color name="light_gray_stroke">#D3D3D3</color>
 </resources>
