텍스트 변경 및 백그라운드명에 따른 수정작업

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -42,10 +42,10 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="40dp"
-        android:background="@drawable/login_idpw_rounded_background"
+        android:background="@drawable/login_rounded_background"
         android:drawableStart="@drawable/ic_user"
         android:drawablePadding="12dp"
-        android:hint=" 아이디"
+        android:hint=" 이메일"
         android:textStyle="bold"
         android:inputType="text"
         android:paddingStart="16dp"
@@ -59,7 +59,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="12dp"
-        android:background="@drawable/login_idpw_rounded_background"
+        android:background="@drawable/login_rounded_background"
         android:drawableStart="@drawable/ic_lock"
         android:drawablePadding="12dp"
         android:hint=" 비밀번호"
@@ -76,7 +76,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="24dp"
-        android:background="@drawable/login_button_orange_rounded_bakground"
+        android:background="@drawable/orange_button_rounded_bakground"
         android:text="로그인"
         android:textColor="@color/white"
         android:textSize="18sp"
