--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
 
     <!-- 뒤로가기 버튼 -->
     <ImageView
-        android:id="@+id/iv_back_button"
+        android:id="@+id/iv_back_button_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
