별모양 벡터 생성

--- a/app/src/main/res/layout/cook_card_02.xml
+++ b/app/src/main/res/layout/cook_card_02.xml
@@ -102,9 +102,9 @@
                 android:text="@string/default_rating"
                 android:textSize="20sp"
                 android:textColor="@android:color/black"
-                app:drawableStartCompat="@android:drawable/btn_star_big_on"
+                app:drawableStartCompat="@drawable/star"
                 app:drawableTint="#FFC107"
-                android:drawablePadding="2dp"
+                android:drawablePadding="6dp"
                 android:gravity="center_vertical"/>
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
