패키지명 수정

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Test_2" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Base.Theme.recipe_pocket" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="android:windowBackground">@color/white</item>
@@ -9,5 +9,5 @@
         <!-- <item name="android:windowBackground">#FFFFFF</item> -->
     </style>
 
-    <style name="Theme.Test_2" parent="Base.Theme.Test_2" />
+    <style name="Theme.recipe_pocket" parent="Base.Theme.recipe_pocket" />
 </resources>
