--- a/app/src/main/res/layout/cook_card_02.xml
+++ b/app/src/main/res/layout/cook_card_02.xml
@@ -26,7 +26,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:id="@+id/card_image_view"
+                android:id="@+id/recipe_image_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@drawable/bg_main_rounded_gray"
