--- a/app/src/main/res/values/Style.xml
+++ b/app/src/main/res/values/Style.xml
@@ -15,4 +15,8 @@
         <item name="android:letterSpacing">-0.02</item>
         <item name="android:textStyle">bold</item>
     </style>
+    <style name="category">
+        <item name="android:textSize">13sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
